--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SixString Studio | Premium Guitars</title>
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%236366f1'%3E%3Cpath d='M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z'/%3E%3C/svg%3E">
-    <link href="/src/output.css" rel="stylesheet">
+    <link href="src/output.css" rel="stylesheet">
 </head>
 <body class="apple-font min-h-screen bg-gradient-to-br from-indigo-500 via-purple-600 to-blue-600">
     <!-- Header with Tailwind Classes -->
